# wagtail-StreamField

./: db.sqlite3  manage.py  pyproject.toml
blog/: models.py
blog/migrations/: 0001_initial.py
blog/static/blog/css/: blog.css
blog/templates/blog/: blog_index_page.html  blog_page.html
blog/templates/blog/streamfield/blocks/: heading_block.html  image_block.html
home/: models.py
home/migrations/: 0003_homepage_body.py
mysite/settings/: base.py  dev.py
mysite/templates/: base.html
