[project]
name = "wagtail-tutorial-site"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykola Dotsenko",email = "docnikolaj1990@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "wagtail (>=7.0,<7.1)",
    "django (>=5.2,<5.3)",
    "django-taggit (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
